--- a/University_Lecture/중간대비.md
+++ b/University_Lecture/중간대비.md
@@ -2,10 +2,12 @@
 * 인공지능을 위한 응용수학 : 선형대수, 확률통계, 수치해석 [[link]](https://www.deeplearningbook.org/)
 * 인공지능 분야에서는 상황을 판단하는 하나의 방법으로 정답이 될 확률이 가장 높은 것을 정답으로 채택하는 방법을 자주 사용한다.
 
-* 확률
-
+1. 확률
 $$
-확률 \ = \frac{어떤\ 사건이\ 발생할\ 수\ 있는\ 경우의\ 가짓\ 수}{모든 \ 경우의\ 가짓수}
+확률 = \frac{어떤 사건이 발생할 수 있는 경우의 가짓 수}{모든 경우의 가짓수}
+$$
+$$
+\sqrt{3x-1}+(1+x)^2
 $$
 
 ```
