--- a/University_Lecture/중간대비.md
+++ b/University_Lecture/중간대비.md
@@ -3,15 +3,7 @@
 * 인공지능 분야에서는 상황을 판단하는 하나의 방법으로 정답이 될 확률이 가장 높은 것을 정답으로 채택하는 방법을 자주 사용한다.
 
 1. 확률
-$$
-확률 = \frac{어떤 사건이 발생할 수 있는 경우의 가짓 수}{모든 경우의 가짓수}
-$$
-확률 \ = \frac{어떤\ 사건이\ 발생할\ 수\ 있는\ 경우의\ 가짓\ 수}{모든 \ 경우의\ 가짓수}
-$$
-\sqrt{3x-1}+(1+x)^2
-$$
-
-$$ f(x) = \int \frac{2x^2+4x+6}{x-2} $$
+$$ 확률 = \int \frac{어떤 사건이 발생할 수 있는 경우의 가짓 수}{모든 경우의 가짓수} $$
 ```
 예) 주사위의 1이 나올 경우의 수를 구하시오.
 주사위를 던져 나오는 모든 경우의 수 : 1,2,3,4,5,6 총 6가지
