--- a/University_Lecture/중간대비.md
+++ b/University_Lecture/중간대비.md
@@ -1,4 +1,4 @@
-### 190314(week 2-2) 인공지능을 위한 기초수학: 
+### 190314(week 2-2) 인공지능을 위한 기초수학: 확률통계
 * 인공지능을 위한 응용수학 : 선형대수, 확률통계, 수치해석 [[link]](https://www.deeplearningbook.org/)
 * 인공지능 분야에서는 상황을 판단하는 하나의 방법으로 정답이 될 확률이 가장 높은 것을 정답으로 채택하는 방법을 자주 사용한다.
 
